--- a/src/main/webapp/modules/signup/signup.view.html
+++ b/src/main/webapp/modules/signup/signup.view.html
@@ -1,5 +1,5 @@
 <div class="alert alert-danger" role="alert" ng-repeat="error in errors">
-    {{error}}
+    <div ng-repeat="(key, value) in error">{{value}}</div>
 </div>
 
 <div>
