--- a/src/main/webapp/modules/companies/details/company.details.view.html
+++ b/src/main/webapp/modules/companies/details/company.details.view.html
@@ -1,6 +1,7 @@
 <div class="alert alert-danger" role="alert" ng-repeat="error in errors">
-    {{error}}
+    <div ng-repeat="(key, value) in error">{{value}}</div>
 </div>
+
 <br>
 <input type="text" ng-model="model.title" placeholder="Title" class="form-control">
 <br>
